# Market-Sentiment-Analysis

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml  run.py
archive/: original_implementation.py
configs/: config.yaml
configs/data/: synthetic.yaml
configs/evaluation/: standard.yaml
configs/model/: finbert.yaml
demo/: streamlit_app.py
scripts/: train.py
src/data/: __init__.py  market_data.py  synthetic_data.py  text_preprocessing.py
src/utils/: __init__.py  evaluation.py
tests/: test_models.py
